syntax = "proto3";

package user;

option go_package = "common/proto/user";

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  Role role = 4;
  string name = 5;
  string surname = 6;
  Address address = 7;
}

message Address {
  string id = 1;
  string country = 2;
  string city = 3;
  string street = 4;
  string number = 5;
}

enum Role {
  HOST = 0;
  GUEST = 1;
  NK = 2;
}

message CreateUserRequest {
  string id = 1;
  string email = 2;
  string password = 3;
  Role role = 4;
  string name = 5;
  string surname = 6;
  Address address = 7;
}

message CreateUserResponse {
  string message = 1;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

